Added class ImageResize och allt annat...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
        android:id="@+id/my_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:divider="@null"
+       android:divider="@null" >
 
-      ></ListView>
+  </ListView>
 
 </RelativeLayout>
